Added More armor compatability Added Offhand compatibility
Added /showkit <kit> to preview any kit.

Fixed some formatting issues with the timers.

Made a new system for storing playerdata (faster, better, less power draining).